services.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 8080  # The port inside the Kubernetes cluster
      targetPort: 8080  # The port where your Spring Boot application is listening
  type: ClusterIP  # ClusterIP by default, can change to LoadBalancer or NodePort based on requirements

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 1  # Number of instances/pods you want to run
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: maheshboyalla/helloworld:latest # Replace with your Docker image name
          ports:
            - containerPort: 8080  # Expose the application port inside the container
